--- a/_posts/2023-05-19-MYSQL.md
+++ b/_posts/2023-05-19-MYSQL.md
@@ -2,14 +2,14 @@
 title: MYSQL
 date: 2023-05-16 00:00:00 +/-TTTT 
 categories: [Explaination, OWASP TOP 10]
-tags: [sql injection]     # TAG names should always be lowercase
+tags: [Inyección sql, MYSQL]     # TAG names should always be lowercase
 ---
 
-# Injeccion SQL
+# Indice MYSQL
 
 1. Instalacion
 2. Basico
-3. Injeccion
+3. mas cosas
 
 ---
 
@@ -155,7 +155,7 @@ mysql> show tables;
 
 ### Eliminar una tabla
 
-```bash
+```text
 mysql> DROP TABLE nombre_de_la_tabla;
 Query OK, 0 rows affected (0,22 sec)
 
