post MYSQL mysql -u root

--- a/_posts/2023-05-19-MYSQL.md
+++ b/_posts/2023-05-19-MYSQL.md
@@ -47,6 +47,13 @@ sudo rm -rf /etc/mysql
 
 ## Basico: Crear y Eliminar
 
+Comando para conectarse a la base de datos MYSQL.
+
+```bash
+$ mysql -u root
+mysql>
+```
+
 ### Listado de las bases de datos
 
 ```text
