--- a/_posts/2023-05-19-MYSQL.md
+++ b/_posts/2023-05-19-MYSQL.md
@@ -5,11 +5,15 @@ categories: [Explaination, OWASP TOP 10]
 tags: [Inyección sql, MYSQL]     # TAG names should always be lowercase
 ---
 
-# Indice MYSQL
+# Indice - MYSQL
 
-1. Instalacion
-2. Basico
-3. mas cosas
+1. [Instalar y desinstalar MYSQL.](#instalar-mysql)
+2. [Que es una base de datos relacional.](#base-de-datos-relacional)
+3. [Manejo de base de datos.](#bases-de-datos)
+4. [Manejo de tablas.](#tablas)
+5. [Manejo de columnas.](#columnas)
+6. [Manejo de datos.](#datos)
+7. [Tipos de datos.](#tipos-de-datos)
 
 ---
 
@@ -29,6 +33,8 @@ systemctl enable mysql
 systemctl status mysql
 ```
 
+---
+
 ## Desinstalar MYSQL
 
 Comandos necesarios para desinstalar MYSQL.
@@ -45,7 +51,17 @@ sudo rm -rf /etc/my.cnf
 sudo rm -rf /etc/mysql
 ```
 
-## Basico: Crear y Eliminar
+---
+
+## Base de datos relacional
+
+MYSQL es un gestor de bases de datos relacionales.
+Una base de datos es relacional cuando guarda los datos de manera que relaciona unos con otros.
+En este caso los datos son guardados en bases de datos, cada base de dato tiene sus tablas y cada tabla tiene sus columnas.
+De esta manera si se quiere acceder a un dato se debe seleccionar una base de datos y leer la informacion en las columnas de las tablas que se necesiten.
+
+
+### Iniciar MYSQL
 
 Comando para conectarse a la base de datos MYSQL.
 
@@ -53,6 +69,10 @@ Comando para conectarse a la base de datos MYSQL.
 $ mysql -u root
 mysql>
 ```
+
+---
+
+## Bases de datos
 
 ### Listado de las bases de datos
 
@@ -114,6 +134,8 @@ mysql> SHOW DATABASES;
 
 ---
 
+## Tablas
+
 ### Listado de tablas
 
 ```text
@@ -172,6 +194,8 @@ Empty set (0,00 sec)
 
 ---
 
+## Columnas
+
 ### Listar columnas de una tabla
 
 Las tablas se deben crear con minimo una columna.
@@ -190,7 +214,6 @@ mysql> SHOW COLUMNS FROM pruebas_tables;
 ```
 
 ### Crear una columna
-
 
 ```text
 mysql> ALTER TABLE pruebas_tables ADD col2 char(20);
@@ -226,7 +249,381 @@ mysql> SHOW COLUMNS FROM pruebas_tables;
 
 ---
 
-### Tipo de datos
+## Datos
+
+### Creacion de la base de datos
+
+Primero creo una base de datos 'test_db' con dos tablas 'clientes' y 'empleados', asi puedo jugar un poco con las instrucciones SELECT, UNION y ORDER BY.
+Las columnas 'id' incrementan automaticamente al agregar datos a la tabla.
+
+
+Creo la base de datos.
+```text
+mysql> create database test_db;
+mysql> use test_db;
+mysql> create table clientes (id int auto_increment primary key, nombre char(20), apellido char(20), email char(20) );
+mysql> create table empleados (id int auto_increment primary key, nombre char(20), apellido char(20), edad int,
+    -> cargo char(20), email char(20) );
+
+```
+
+Listo la base de datos, para que se pueda ver la estructura.
+```text
+
+mysql> use test_db;
+Database changed
+mysql> show tables;
++-------------------+
+| Tables_in_test_db |
++-------------------+
+| clientes          |
+| empleados         |
++-------------------+
+2 rows in set (0,00 sec)
+
+mysql> show columns from clientes;
++----------+----------+------+-----+---------+----------------+
+| Field    | Type     | Null | Key | Default | Extra          |
++----------+----------+------+-----+---------+----------------+
+| id       | int(11)  | NO   | PRI | NULL    | auto_increment |
+| nombre   | char(20) | YES  |     | NULL    |                |
+| apellido | char(20) | YES  |     | NULL    |                |
++----------+----------+------+-----+---------+----------------+
+3 rows in set (0,01 sec)
+
+mysql> show columns from empleados;
++----------+----------+------+-----+---------+----------------+
+| Field    | Type     | Null | Key | Default | Extra          |
++----------+----------+------+-----+---------+----------------+
+| id       | int(11)  | NO   | PRI | NULL    | auto_increment |
+| nombre   | char(20) | YES  |     | NULL    |                |
+| apellido | char(20) | YES  |     | NULL    |                |
+| edad     | int(11)  | YES  |     | NULL    |                |
+| cargo    | char(20) | YES  |     | NULL    |                |
++----------+----------+------+-----+---------+----------------+
+5 rows in set (0,01 sec)
+
+```
+
+### Listar datos
+
+Para listar los datos de una tabla se utiliza la instruccion SELECT, y se puede seleccionar cualquier cantidad de columnas.
+
+```text
+mysql> SELECT * FROM clientes;
+Empty set (0,00 sec)
+
+mysql> SELECT * FROM empleados;
+Empty set (0,00 sec)
+
+mysql> SELECT id FROM clientes;
+Empty set (0,00 sec)
+
+mysql> SELECT id FROM empleados;
+Empty set (0,00 sec)
+
+```
+
+Como las tablas estan vacias mysql nos indica 'Empty set'.
+
+### Crear datos
+
+Para agregar datos en una tabla se utiliza la siguiente instruccion.
+
+**INSERT INTO nombre_de_la_tabla (columna1, columna2, columna3, ...)
+VALUES (valor1, valor2, valor3, ...);**
+
+El orden de 'valor1, valor2, valor3, ...' esta dado por el orden de 'columna1, columna2, columna3, ...', es decir que se puede ingresar un solo dato de la siguiente manera.
+
+**INSERT INTO nombre_de_la_tabla (columna3) VALUES (valor3)**
+
+```text
+mysql> INSERT INTO clientes (nombre, apellido) VALUES ('Juan', 'Vega');
+Query OK, 1 row affected (0,12 sec)
+
+mysql> select * from clientes;
++----+--------+----------+-------+
+| id | nombre | apellido | email |
++----+--------+----------+-------+
+|  1 | Juan   | Vega     | NULL  |
++----+--------+----------+-------+
+1 row in set (0,00 sec)
+
+mysql> INSERT INTO clientes (apellido, nombre) VALUES ('Juan', 'Vega');
+Query OK, 1 row affected (0,14 sec)
+
+mysql> select * from clientes;
++----+--------+----------+-------+
+| id | nombre | apellido | email |
++----+--------+----------+-------+
+|  1 | Juan   | Vega     | NULL  |
+|  2 | Vega   | Juan     | NULL  |
++----+--------+----------+-------+
+2 rows in set (0,01 sec)
+
+mysql> INSERT INTO clientes (nombre, apellido, email) VALUES ('Olivia', 'Paredes', 'o_paredes@mail.com');
+Query OK, 1 row affected (0,37 sec)
+
+mysql> select * from clientes;
++----+--------+----------+--------------------+
+| id | nombre | apellido | email              |
++----+--------+----------+--------------------+
+|  1 | Juan   | Vega     | NULL               |
+|  2 | Vega   | Juan     | NULL               |
+|  3 | Olivia | Paredes  | o_paredes@mail.com |
++----+--------+----------+--------------------+
+3 rows in set (0,00 sec)
+
+```
+
+Tambien se puede cambiar el valor de 'id', no necesariamente tiene que incrementar de a una unidad. Si se siguen agregando datos el 'id' seguira aumentando de a una unidad si no se le especifica un valor. 
+
+```text
+
+mysql> INSERT INTO clientes (id, apellido, nombre, email) VALUES (20, 'Paredes','Ariel', 'a_paredes@mail.com');
+Query OK, 1 row affected (0,37 sec)
+
+mysql> select * from clientes;
++----+--------+----------+--------------------+
+| id | nombre | apellido | email              |
++----+--------+----------+--------------------+
+|  1 | Juan   | Vega     | NULL               |
+|  2 | Vega   | Juan     | NULL               |
+|  3 | Olivia | Paredes  | o_paredes@mail.com |
+| 20 | Ariel  | Paredes  | a_paredes@mail.com |
++----+--------+----------+--------------------+
+4 rows in set (0,00 sec)
+
+mysql> INSERT INTO clientes (nombre, apellido, email) VALUES ('Lucas', 'Ortega','l_ortega@mail.com');
+Query OK, 1 row affected (0,51 sec)
+
+mysql> select * from clientes;
++----+--------+----------+--------------------+
+| id | nombre | apellido | email              |
++----+--------+----------+--------------------+
+|  1 | Juan   | Vega     | NULL               |
+|  2 | Vega   | Juan     | NULL               |
+|  3 | Olivia | Paredes  | o_paredes@mail.com |
+| 20 | Ariel  | Paredes  | a_paredes@mail.com |
+| 21 | Lucas  | Ortega   | l_ortega@mail.com  |
++----+--------+----------+--------------------+
+5 rows in set (0,00 sec)
+
+```
+
+Tambien se pueden agregar mas de un dato a la vez.
+
+```text
+mysql> INSERT INTO clientes (nombre, apellido, email) VALUES ('Sebastian', 'Ramirez','s_ramirez@mail.com'),
+    -> ('Maria', 'Moralez', 'la_mary@hotmail.com');
+Query OK, 2 rows affected (0,13 sec)
+Records: 2  Duplicates: 0  Warnings: 0
+
+mysql> select * from clientes;
++----+-----------+----------+---------------------+
+| id | nombre    | apellido | email               |
++----+-----------+----------+---------------------+
+|  1 | Juan      | Vega     | NULL                |
+|  2 | Vega      | Juan     | NULL                |
+|  3 | Olivia    | Paredes  | o_paredes@mail.com  |
+| 20 | Ariel     | Paredes  | a_paredes@mail.com  |
+| 21 | Lucas     | Ortega   | l_ortega@mail.com   |
+| 24 | Sebastian | Ramirez  | s_ramirez@mail.com  |
+| 25 | Maria     | Moralez  | la_mary@hotmail.com |
++----+-----------+----------+---------------------+
+7 rows in set (0,00 sec)
+```
+
+### Modificar datos
+
+Para modificar los datos ingresados se utiliza la siguiente instruccion:
+
+**UPDATE nombre_de_la_tabla SET columna1 = nuevo_valor1, columna2 = nuevo_valor2, ... WHERE condicion;**
+
+Como la tabla tiene el identificador con autocrecimiento la condicion puede ser 'id' = numero_identificador.
+
+```text
+mysql> UPDATE clientes SET nombre = 'Martin', apellido = 'Ohto', email = 'm_ohto@mail.com' WHERE id = '2';
+Query OK, 1 row affected (0,13 sec)
+Rows matched: 1  Changed: 1  Warnings: 0
+
+mysql> select * from clientes;
++----+-----------+----------+---------------------+
+| id | nombre    | apellido | email               |
++----+-----------+----------+---------------------+
+|  1 | Juan      | Vega     | NULL                |
+|  2 | Martin    | Ohto     | m_ohto@mail.com     |
+|  3 | Olivia    | Paredes  | o_paredes@mail.com  |
+| 20 | Ariel     | Paredes  | a_paredes@mail.com  |
+| 21 | Lucas     | Ortega   | l_ortega@mail.com   |
+| 24 | Sebastian | Ramirez  | s_ramirez@mail.com  |
+| 25 | Maria     | Moralez  | la_mary@hotmail.com |
++----+-----------+----------+---------------------+
+7 rows in set (0,00 sec)
+
+```
+
+Si no se tiene un identificador se puede usar caulquier otra columna, o varias, para saber que dato cambiar.
+
+```text
+mysql> UPDATE clientes SET id = 4 WHERE nombre = 'Ariel' AND apellido = 'Paredes' AND email = 'a_paredes@mail.com';
+Query OK, 1 row affected (0,36 sec)
+Rows matched: 1  Changed: 1  Warnings: 0
+
+mysql> select * from clientes;
++----+-----------+----------+---------------------+
+| id | nombre    | apellido | email               |
++----+-----------+----------+---------------------+
+|  1 | Juan      | Vega     | NULL                |
+|  2 | Martin    | Ohto     | m_ohto@mail.com     |
+|  3 | Olivia    | Paredes  | o_paredes@mail.com  |
+|  4 | Ariel     | Paredes  | a_paredes@mail.com  |
+| 21 | Lucas     | Ortega   | l_ortega@mail.com   |
+| 24 | Sebastian | Ramirez  | s_ramirez@mail.com  |
+| 25 | Maria     | Moralez  | la_mary@hotmail.com |
++----+-----------+----------+---------------------+
+7 rows in set (0,00 sec)
+
+```
+
+### Eliminar datos
+
+Para eliminar datos de una tabla se utiliza la siguiente instruccion:
+
+**DELETE FROM nombre_de_la_tabla WHERE condicion;**
+
+Elimino todos los datos que tengan un 'id' mayor a 10, de esta manera la tabla me queda mas bonita y no tengo saltos de un id a otro.
+
+```text
+mysql> DELETE FROM clientes WHERE id > 10;
+Query OK, 3 rows affected (0,46 sec)
+
+mysql> select * from clientes;
++----+--------+----------+--------------------+
+| id | nombre | apellido | email              |
++----+--------+----------+--------------------+
+|  1 | Juan   | Vega     | NULL               |
+|  2 | Martin | Ohto     | m_ohto@mail.com    |
+|  3 | Olivia | Paredes  | o_paredes@mail.com |
+|  4 | Ariel  | Paredes  | a_paredes@mail.com |
++----+--------+----------+--------------------+
+4 rows in set (0,00 sec)
+
+```
+
+### Union y Order By
+
+Tablas bases en las que se va a usar Union y Order By.
+
+```text
+mysql> insert into empleados (nombre, apellido, edad, cargo, email) values
+    -> ('Carlos', 'Saul', 38, 'Jefe', 'callSaul@mail.com'),
+    -> ('Juan', 'Gomez', 24, 'Empleado', 'juan983@mail.com'),
+    -> ('Maria', 'Cordero', 29, 'SubJefe', 'maria09@mail.com');
+Query OK, 3 rows affected (0,07 sec)
+Records: 3  Duplicates: 0  Warnings: 0
+
+mysql> select * from empleados;
++----+--------+----------+------+----------+-------------------+
+| id | nombre | apellido | edad | cargo    | email             |
++----+--------+----------+------+----------+-------------------+
+|  1 | Carlos | Saul     |   38 | Jefe     | callSaul@mail.com |
+|  2 | Juan   | Gomez    |   24 | Empleado | juan983@mail.com  |
+|  3 | Maria  | Cordero  |   29 | SubJefe  | maria09@mail.com  |
++----+--------+----------+------+----------+-------------------+
+3 rows in set (0,00 sec)
+
+mysql> select * from clientes;
++----+--------+----------+--------------------+
+| id | nombre | apellido | email              |
++----+--------+----------+--------------------+
+|  1 | Juan   | Vega     | NULL               |
+|  2 | Martin | Ohto     | m_ohto@mail.com    |
+|  3 | Olivia | Paredes  | o_paredes@mail.com |
+|  4 | Ariel  | Paredes  | a_paredes@mail.com |
++----+--------+----------+--------------------+
+4 rows in set (0,00 sec)
+
+```
+
+#### UNION
+
+La instruccion 'UNION' se utiliza para concatenar 2 respuestas, estas deben coincidir en cantidad de columnas.
+
+```text
+mysql> select id, nombre, apellido from empleados union select id, nombre, apellido from clientes;
++----+--------+----------+
+| id | nombre | apellido |
++----+--------+----------+
+|  1 | Carlos | Saul     |
+|  2 | Juan   | Gomez    |
+|  3 | Maria  | Cordero  |
+|  1 | Juan   | Vega     |
+|  2 | Martin | Ohto     |
+|  3 | Olivia | Paredes  |
+|  4 | Ariel  | Paredes  |
++----+--------+----------+
+7 rows in set (0,00 sec)
+
+mysql> select id, nombre, apellido from empleados union select nombre, id, email from clientes;
++--------+--------+--------------------+
+| id     | nombre | apellido           |
++--------+--------+--------------------+
+| 1      | Carlos | Saul               |
+| 2      | Juan   | Gomez              |
+| 3      | Maria  | Cordero            |
+| Juan   | 1      | NULL               |
+| Martin | 2      | m_ohto@mail.com    |
+| Olivia | 3      | o_paredes@mail.com |
+| Ariel  | 4      | a_paredes@mail.com |
++--------+--------+--------------------+
+7 rows in set (0,00 sec)
+
+```
+
+#### ORDER BY
+
+La instruccion 'ORDER BY' se utiliza para denotar como se quiere ordenar el resultado, este puede ser dado por nombre o numero de columna.
+
+```text
+mysql> select * from clientes;
++----+--------+----------+--------------------+
+| id | nombre | apellido | email              |
++----+--------+----------+--------------------+
+|  1 | Juan   | Vega     | NULL               |
+|  2 | Martin | Ohto     | m_ohto@mail.com    |
+|  3 | Olivia | Paredes  | o_paredes@mail.com |
+|  4 | Ariel  | Paredes  | a_paredes@mail.com |
++----+--------+----------+--------------------+
+4 rows in set (0,00 sec)
+
+mysql> select * from clientes order by 2;
++----+--------+----------+--------------------+
+| id | nombre | apellido | email              |
++----+--------+----------+--------------------+
+|  4 | Ariel  | Paredes  | a_paredes@mail.com |
+|  1 | Juan   | Vega     | NULL               |
+|  2 | Martin | Ohto     | m_ohto@mail.com    |
+|  3 | Olivia | Paredes  | o_paredes@mail.com |
++----+--------+----------+--------------------+
+4 rows in set (0,00 sec)
+
+mysql> select * from clientes order by nombre;
++----+--------+----------+--------------------+
+| id | nombre | apellido | email              |
++----+--------+----------+--------------------+
+|  4 | Ariel  | Paredes  | a_paredes@mail.com |
+|  1 | Juan   | Vega     | NULL               |
+|  2 | Martin | Ohto     | m_ohto@mail.com    |
+|  3 | Olivia | Paredes  | o_paredes@mail.com |
++----+--------+----------+--------------------+
+4 rows in set (0,00 sec)
+
+```
+
+---
+
+## Tipos de datos
 
 1. Numéricos:
 * INTEGER o INT: Números enteros.
@@ -258,24 +655,5 @@ mysql> SHOW COLUMNS FROM pruebas_tables;
 * SET: Valores de un conjunto predefinido.
 * JSON: Almacenamiento y manipulación de datos JSON.
 
-## Enumeracion: Recopilacion de datos
-
-### TODO :'c
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+---
 
