boot linux mannualy

--- a/_posts/2023-05-19-MYSQL.md
+++ b/_posts/2023-05-19-MYSQL.md
@@ -1,7 +1,7 @@
 ---
 title: MYSQL
 date: 2023-05-16 00:00:00 +/-TTTT 
-categories: [Explaination, OWASP TOP 10]
+categories: [Explanation, OWASP TOP 10]
 tags: [Inyección sql, MYSQL]     # TAG names should always be lowercase
 ---
 
