--- a/_posts/2023-05-31-BuffEMR.md
+++ b/_posts/2023-05-31-BuffEMR.md
@@ -13,7 +13,7 @@ https://www.vulnhub.com/entry/buffemr-101,717/
 
 Descargar la maquina [BuffEMR](https://www.vulnhub.com/entry/buffemr-101,717/){:target="_blank"} desde VulnHub y encender la maquina virtual
 
-### IP Victima
+## IP Victima
 
 Utilizo arp-scan para buscar la ip de la maquina victima, en este caso es la 192.168.0.219
 Con el parametro *-l* indico que se escanea la red local
