--- a/_posts/2023-06-10-BuffEMR.md
+++ b/_posts/2023-06-10-BuffEMR.md
@@ -231,7 +231,7 @@ Using binary mode to transfer files.
 ftp> 
 ```
 
-El inicio de secion fue exitoso, veo carpetas y archivos compartidos
+El inicio de sesion fue exitoso, veo carpetas y archivos compartidos
 
 ```bash
 ftp> ls -la
@@ -260,7 +260,7 @@ local: README remote: README
 ftp> 
 ```
 
-Me encuentro con una carpeta share y dentro una carpeta openemr y un achivo README que es un archivo de prueba no muy interesante.
+Me encuentro con una carpeta share y dentro una carpeta openemr y un archivo README que es un archivo de prueba no muy interesante.
 
 OpenEMR es un software de administracion de practica medica
 La carpeta openemr parece tener informacion interesante
