--- a/_posts/2023-06-10-BuffEMR.md
+++ b/_posts/2023-06-10-BuffEMR.md
@@ -749,7 +749,7 @@ Utilizo **checksec** para evaluar el nivel de seguridad del binario
 
 Como *NX* esta deshabilitado se puede ejecutar codigo maquina guardado en la stack
 
-Como me encontre la funcion *strcpy()* y *NX disabled* puedo hacer un desbordamiento de buffer dode cargue en la stack mi codigo maquina malicioso y lo ejecute modificando el registro *$eip* para que el ejecutable apunte a la direccion de memoria donde este mi codigo.
+Como me encontre la funcion *strcpy()* y *NX disabled* puedo hacer un desbordamiento de buffer donde cargue en la stack mi codigo maquina malicioso y lo ejecute modificando el registro *$eip* para que el ejecutable apunte a la direccion de memoria donde este mi codigo.
 
 ## Tomar control del IP
 
@@ -792,7 +792,7 @@ Con *pattern search $eip* obtengo el tamaño del buffer, en este caso 512 bytes.
 
 Con python2 doy como parametro una cadena de texto con 512 "A" y 4 "B" al final para ver si el $eip es controlable y toma el valor "0x42424242"
 
-## Injectiar codigo maquina
+## Inyectar codigo maquina
 
 Como en la maquina victima el binario se puede ejecutar como el usuario **root** puedo ejecutar el comando */bin/bash -i* con el buffer overflow para obtener una shell como root
 
